# arXiv-mcp

./: README.md  pyproject.toml  smithery.yaml
src/hello_server/: __init__.py  server.py  test-arxiv.ipynb
